# zwaved

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  InterfaceManifest.yml  MANUAL.md  ONBOARDING.md  PreCommitHook.md  README.md  TODO.md
.cmake/: gnu-toolchain.cmake  llvm-toolchain.cmake
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
dbus/: com.tiunda.ZWaved.conf
docker/: Dockerfile
etc/: zwaved.conf
gitscripts/: pre-commit
scripts/: check-format  install-hooks
scripts/codegen/: README.md  generate.py  loader.py  schema.py
scripts/codegen/targets/: __init__.py  cc_codecs.py  cc_translator.py  dbus_methods.py  dbus_signals.py  manifest_summary.py  messagebus.py
scripts/codegen/templates/: cc_codec_cpp.j2  cc_codec_hpp.j2  cc_translator_cpp.j2  dbus_methods_cpp.j2  dbus_methods_hpp.j2  dbus_signals_cpp.j2  dbus_signals_hpp.j2  manifest_summary_hpp.j2  messagebus_cpp.j2  messagebus_hpp.j2
scripts/git-hooks/: pre-commit
src/: CMakeLists.txt  SignalHandler.cpp  SignalHandler.hpp  Version.hpp.in  main.cpp  zwaved.h
src/cc-translator/: CMakeLists.txt  CcTranslator.cpp
src/config/: CMakeLists.txt  Config.cpp  Config.hpp
src/external-api/: CMakeLists.txt  DBusBackend.cpp  DBusBackend.hpp  DBusBackendInternal.hpp  ExternalApiThread.cpp  ExternalApiThread.hpp  IExternalApi.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/message-bus/: CMakeLists.txt  MessageBus.cpp  MessageBus.hpp  MessageBusInternal.hpp
src/node-registry/: CMakeLists.txt  NodeRegistry.cpp  NodeRegistry.hpp
src/pending-queue/: CMakeLists.txt  PendingQueue.cpp  PendingQueue.hpp
src/zwave-dongle/: CMakeLists.txt  DeviceHandoff.cpp  DeviceHandoff.hpp  MonitorThread.cpp
src/zwave-protocol/: Association.hpp  BinarySwitch.cpp  BinarySwitch.hpp  CMakeLists.txt  FrameTransport.cpp  FrameTransport.hpp  HostApi.cpp  HostApi.hpp  HostApiCallbackDispatcher.cpp  HostApiCallbackDispatcher.hpp  HostApiRequestQueue.cpp  HostApiRequestQueue.hpp  HostApiSession.cpp  HostApiSession.hpp  ProtocolThread.cpp  SerialPort.cpp  SerialPort.hpp  ZwaveACCFrame.cpp  ZwaveACCFrame.hpp  ZwaveCANFrame.cpp  ZwaveCANFrame.hpp  ZwaveDataFrame.cpp  ZwaveDataFrame.hpp  ZwaveNAKFrame.cpp  ZwaveNAKFrame.hpp
src/zwave-protocol/application/: Association.cpp  Association.hpp  Basic.cpp  Basic.hpp  Battery.cpp  Battery.hpp  BinarySwitch.cpp  BinarySwitch.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  ManufacturerSpecific.cpp  ManufacturerSpecific.hpp  MultichannelAssociation.cpp  MultichannelAssociation.hpp  MultilevelSwitch.cpp  MultilevelSwitch.hpp  NodeVersion.cpp  NodeVersion.hpp  WakeUp.cpp  WakeUp.hpp  ZWavePlusInfo.cpp  ZWavePlusInfo.hpp
tests/: .clang-tidy  Association_test.cpp  Basic_test.cpp  Battery_test.cpp  BinarySwitch_test.cpp  CMakeLists.txt  Configuration_test.cpp  FrameTransport_test.cpp  HostApi_test.cpp  ManufacturerSpecific_test.cpp  MultichannelAssociation_test.cpp  MultilevelSwitch_test.cpp  NodeVersion_test.cpp  PendingQueue_test.cpp  WakeUp_test.cpp  ZWavePlusInfo_test.cpp
utils/: CMakeLists.txt
utils/zwave-terminal/: CMakeLists.txt  main.cpp
